# FilterCV

./: .gitignore  CMakeLists.txt  README.MD
include/: globals.h
include/core/: cv_engine.h
include/filters/: affine.h  blur.h  canny.h  contours.h  glitch.h  jpeg.h  keypoints.h  morphology.h  pixel_sort.h  sharpen.h  threshold.h
include/gui/: image_widget.h  main_window.h  utils.h  window.h
src/: main.cpp
src/core/: cv_engine.cpp
src/gui/: image_widget.cpp  main_window.cpp  utils.cpp  window.cpp
